--- a/src/Components/SideBar/SideBar.css
+++ b/src/Components/SideBar/SideBar.css
@@ -10,6 +10,7 @@
     color: rgb(0, 0, 0);
     box-shadow: 0px 1px 2px gray;
     position: fixed;
+    z-index: 1;
 }
 .nav-link{
     color: black;
